--- a/app/Resources/views/paginaPrincipal/pagina.html.twig
+++ b/app/Resources/views/paginaPrincipal/pagina.html.twig
@@ -6,15 +6,59 @@
     <div class="content-menu">
         <li onclick="abrirDiv1()"><span class="lnr lnr-home icon1"></span><h4 class="text1">PERFIL</h4></li>
         <li onclick="abrirDiv2()"><span class="lnr film-play icon2"></span><h4 class="text2">PRODUCTOS</h4></li>
+        {% if productos[0] is defined %}
         <li><span class="lnr lnr-store icon3"></span>
+            
             <a href=" {{path('chatPrincipal',{'idUsuario':productos[0].usuariosusuarios.idusuarios})}}"  class="text3">MENSAJES</a></li>
+            {% endif %}
         <li onclick="abrirDiv4()"><span class="lnr lnr-picture icon4"></span><h4  class="text4">FAVORITOS</h4></li>
+        {% if app.user.rolesroles[0]=="Admin" %}
+            <li><span class="lnr lnr-home icon1"></span><h4 class="text1">
+                    <a href=" {{path('gestionUsuarios')}}"  class="text3">Gestión Usuarios</a>    
+            
+            </li>
+            <li><span class="lnr lnr-home icon1"></span><h4 class="text1">
+                <a href=" {{path('gestionCategorias')}}"  class="text3">Gestión Categorias</a>    
         
+        </li>
+            
+        {% endif %}
         
         
     </div>
     <div class="container_uno">
-            <h1>Perfil</h1>
+        <div class="titulo">
+            <h3>Tu Perfil</h3>
+        </div>
+        <div class="parrafo1">
+            <span>Aqui podrás ver y editar los datos de tu perfil</span>
+            	
+            <a class="btn btn-success" href="{{ path('logout') }}">Cerrar sesión</a>
+            <div id="imagen">
+                    <div class="usuarios_producto">
+                        <div class="foto_usuario" style="background-image: url('data:image/jpeg;base64,{{imagenCod1[usuario.idusuarios] }}'
+                            )">
+                            
+                            </div>
+                        
+                    </div>
+
+
+            </div>
+             <!-- Formulario para editar -->
+             <div class="formularioEdicionUsu">
+                    <h1>Formulario a editar</h1>
+                
+                    {{ form_start(fomEditarUsu) }}
+                    {{ form_errors(fomEditarUsu) }}
+                
+                    {{ form_widget(fomEditarUsu) }}
+                   
+                
+                    
+                {{ form_end(fomEditarUsu) }}
+                </div>
+        </div>
         </div>
         <div class="container_dos">
             <div class="titulo">
@@ -42,12 +86,12 @@
                     </tr>
                     {% for producto in productos %}
                     <tr>
-                        <td><input type="checkbox" class="form-check-input" id="checkbox{{producto.idproductos}}" style="display:none"></td>
+                        <td><input type="checkbox" class="form-check-input" id="checkboxP{{producto.idproductos}}" style="display:none"></td>
                         <td><img width="200" height="200" src="data:image/jpeg;base64,{{imagenCod[producto.idproductos]}}"/></td>
                         <td>{{producto.precio}}€</td>
                         <td>{{producto.nombre}}</td>
-                        <td><button id="formEditar{{producto.idproductos}}" type="button" class="btn btn-info">Editar</button></td>
-                        <td><button id="formBorrar{{producto.idproductos}}" type="button" class="btn btn-danger">Borrar</button></td>
+                        <td><button id="formEditarP{{producto.idproductos}}" type="button" class="btn btn-info">Editar</button></td>
+                        <td><button id="formBorrarP{{producto.idproductos}}" type="button" class="btn btn-danger">Borrar</button></td>
                     </tr>
                     {% endfor %}
                 
@@ -119,6 +163,8 @@
         <div class="container_cuatro">
                         <h1>Opiniones</h1>
             </div>
+
+           
 </main>
 
 
