--- a/app/Resources/views/cabecera.html.twig
+++ b/app/Resources/views/cabecera.html.twig
@@ -3,20 +3,18 @@
   <!--Cuando se loguea el usuario-->
  
  
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Thinder</a>
+ <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand" id="thinder" href="http://localhost/proyectofinal/proyectoThinder/web/app_dev.php/catServ">Thinder</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
+        
         
         <li class="nav-item">
-          <select name="categoria" id="categoriasServ">
+          <select name="categoria" class="form-control" id="categoriasServ">
             <option value="0">--Elige categoria--</option>
               {% for categoria in categorias %}
 
@@ -28,7 +26,7 @@
         
         <form class="form-inline my-2 my-lg-0">
             <input  id="buscar"  class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button onclick="buscarProducto()" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
+            <button onclick="buscarProducto()" class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
           </form>
       </ul>
       <ul class="navbar-nav mr-auto">
@@ -69,13 +67,15 @@
           
           <!-- Modal body -->
           <div class="modal-body">
-            <button type="button" id="registrarse" onclick="formRegistro()">Regístrate</button>
+              
+            <div class="form-group"><a type="button"  class="btn btn-info"  style="margin-left:25%;width:50%;"  id="registrarse">Regístrate</a></div>
 
-            <button type="button" style="display:none;" id="atras" onclick="volverAtras()">Atras</button>
+            <button type="button" style="display:none;" id="atras" onclick="volverAtras()">
+              Atras</button>
             
-            <button type="button" id="sesion" onclick="formSesion()">Inicia sesion</button>
-            <div class="form" style="display:none;">
-                <div class="col-lg-4 box-form">
+            <div class="form-group"><button class="btn btn-info" style="margin-left:25%;width:50%;" type="button" id="sesion" onclick="formSesion()">Inicia sesion</button></div>
+            <div class="form" id="formUsu" style="display:none;">
+                <div class="col-lg-12 box-form">
                   <h2>Identificarse</h2>
                   <hr/>
                   {% if error is defined %}
@@ -92,39 +92,7 @@
                   </form>
               </div>
               </div>
-              {% if formRegistro is defined %}
-              <div class="formRegistro" style="display:none;">
-                  {{ form_start(formRegistro, {'attr': {'novalidate': 'novalidate'}}) }}
-                  <div class="form-group">
-                      {{ form_label(formRegistro.Nombre, 'Nombre: ') }}
-                      {{ form_widget(formRegistro.Nombre, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-
-                    <div class="form-group">
-                        {{ form_label(formRegistro.Apellidos, 'Apellidos: ') }}
-                        {{ form_widget(formRegistro.Apellidos, {'attr': {'class': 'form-control'}}) }}
-                      </div>
-                      <div class="form-group">
-                          {{ form_label(formRegistro.email, 'Email: ') }}
-                          {{ form_widget(formRegistro.email, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                        <div class="form-group">
-                            {{ form_label(formRegistro.password, 'password: ') }}
-                            {{ form_widget(formRegistro.password, {'attr': {'class': 'form-control'}}) }}
-                          </div>
-
-                          <div class="form-group">
-                              {{ form_label(formRegistro.nick, 'nick: ') }}
-                              {{ form_widget(formRegistro.nick, {'attr': {'class': 'form-control'}}) }}
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(formRegistro.FechaNac, 'fecha Nacimiento: ') }}
-                                {{ form_widget(formRegistro.FechaNac, {'attr': {'class': 'form-control'}}) }}
-                              </div>
-                  
-                  {{ form_end(formRegistro) }}
-              </div>
-              {% endif %}
+             
           </div>
           
           <!-- Modal footer -->
