--- a/app/Resources/views/chat/chat.html.twig
+++ b/app/Resources/views/chat/chat.html.twig
@@ -7,19 +7,19 @@
         <li><span class="lnr lnr-store icon3"></span>
             <a href=" {{path('perfil')}}"  class="text3">PERFIL</a></li>
         <li onclick="abrirDiv2()"><span class="lnr film-play icon2"></span>
-            <a href=" {{path('paginaPrincipal') }}"  class="text2">PRODUCTOS</a></li>
+            <a href=" {{path('paginaPrincipal') }}"  class="text3">PRODUCTOS</a></li>
         </li>
         {% if conversaciones[0] is defined %}
         <li><span class="lnr lnr-store icon3"></span>
             <a href=" {{path('chat', {'idProducto': conversaciones[0].idproductos,'idUsuario': conversaciones[0].idusuarios}) }}"  class="text3">MENSAJES</a></li>
         {% endif %}
-        <li onclick="abrirDiv4()"><span class="lnr lnr-picture icon4"></span><h4  class="text4">FAVORITOS</h4></li>
+        <li onclick="abrirDiv4()"><span class="lnr lnr-picture icon4"></span>FAVORITOS</li>
         {% if app.user.rolesroles[0]=="Admin" %}
-            <li><span class="lnr lnr-home icon1"></span><h4 class="text4">
-                    <a href=" {{path('gestionUsuarios')}}"  class="text4">Gestión Usuarios</a>    
+            <li><span class="lnr lnr-home icon1"></span>
+                    <a href=" {{path('gestionUsuarios')}}"  class="text3">Gestión Usuarios</a>    
             
             </li>
-            <li><span class="lnr lnr-home icon1"></span><h4 class="text1">
+            <li><span class="lnr lnr-home icon1"></span>
                 <a href=" {{path('gestionCategorias')}}"  class="text3">Gestión Categorias</a>    
         
             </li>
