--- a/app/Resources/views/crudUsuarios/index.html.twig
+++ b/app/Resources/views/crudUsuarios/index.html.twig
@@ -13,13 +13,13 @@
                 
                 <a href=" {{path('chatPrincipal',{'idUsuario':productos[0].usuariosusuarios.idusuarios})}}"  class="text3">MENSAJES</a></li>
                 {% endif %}
-        <li onclick="abrirDiv4()"><span class="lnr lnr-picture icon4"></span><h4  class="text4">FAVORITOS</h4></li>
+        <li onclick="abrirDiv4()"><span class="lnr lnr-picture icon4"></span>>FAVORITOS</li>
         {% if app.user.rolesroles[0]=="Admin" %}
-        <li><span class="lnr lnr-home icon1"></span><h4 class="text4">
+        <li><span class="lnr lnr-home icon1"></span>
                 <a href=" {{path('gestionUsuarios')}}"  class="text4">Gestión Usuarios</a>    
         
         </li>
-        <li><span class="lnr lnr-home icon1"></span><h4 class="text1">
+        <li><span class="lnr lnr-home icon1"></span>
             <a href=" {{path('gestionCategorias')}}"  class="text3">Gestión Categorias</a>    
     
          </li>
